--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebContent/0229_sw/login2.css=UTF-8
+encoding//WebContent/0301_sw/responsive\ menu.css=UTF-8
