--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.multiRootWorkspaceName": "htmlProject",
-    "maven.view": "hierarchical"
+    "maven.view": "hierarchical",
+    "liveServer.settings.port": 5502
 }
